# seleccion_analista_2022

./: DESCRIPTION  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml
R/: do_nothing.R  dummy_model.R
data/processed/: example_submission.csv
data/raw/: test.csv
pollos_petrel/: __init__.py  do_nothing.py  dummy_model.py  train.csv
src/: example_submission.R  example_submission.py
tests/: test_dummy_model.py  test_nothing.py  testthat.R
tests/testthat/: coverage.R  test_dummy_model.R  test_nothing.R
